add Zephyr config
Signed-off-by: rtjk <47841774+rtjk@users.noreply.github.com>

--- a/zephyr/Kconfig
+++ b/zephyr/Kconfig
@@ -71,4 +71,9 @@ config LIBOQS_ENABLE_SIG_MAYO
 	default y
 	depends on LIBOQS
 
+config LIBOQS_ENABLE_SIG_CROSS
+	bool "Enable the CROSS signature algorithm"
+	default y
+	depends on LIBOQS
+
 endmenu
