--- a/docs/algorithms/sig/cross.yml
+++ b/docs/algorithms/sig/cross.yml
@@ -27,7 +27,7 @@ parameter-sets:
 - name: cross-rsdp-128-balanced
   oqs_alg: OQS_SIG_alg_cross_rsdp_128_balanced
   claimed-nist-level: 1
-  claimed-security: EUF-CMA
+  claimed-security: BUFF
   length-public-key: 77
   length-secret-key: 32
   length-signature: 12912
@@ -55,7 +55,7 @@ parameter-sets:
 - name: cross-rsdp-128-fast
   oqs_alg: OQS_SIG_alg_cross_rsdp_128_fast
   claimed-nist-level: 1
-  claimed-security: EUF-CMA
+  claimed-security: BUFF
   length-public-key: 77
   length-secret-key: 32
   length-signature: 19152
@@ -83,7 +83,7 @@ parameter-sets:
 - name: cross-rsdp-128-small
   oqs_alg: OQS_SIG_alg_cross_rsdp_128_small
   claimed-nist-level: 1
-  claimed-security: EUF-CMA
+  claimed-security: BUFF
   length-public-key: 77
   length-secret-key: 32
   length-signature: 10080
@@ -111,7 +111,7 @@ parameter-sets:
 - name: cross-rsdp-192-balanced
   oqs_alg: OQS_SIG_alg_cross_rsdp_192_balanced
   claimed-nist-level: 3
-  claimed-security: EUF-CMA
+  claimed-security: BUFF
   length-public-key: 115
   length-secret-key: 48
   length-signature: 28222
@@ -139,7 +139,7 @@ parameter-sets:
 - name: cross-rsdp-192-fast
   oqs_alg: OQS_SIG_alg_cross_rsdp_192_fast
   claimed-nist-level: 3
-  claimed-security: EUF-CMA
+  claimed-security: BUFF
   length-public-key: 115
   length-secret-key: 48
   length-signature: 42682
@@ -167,7 +167,7 @@ parameter-sets:
 - name: cross-rsdp-192-small
   oqs_alg: OQS_SIG_alg_cross_rsdp_192_small
   claimed-nist-level: 3
-  claimed-security: EUF-CMA
+  claimed-security: BUFF
   length-public-key: 115
   length-secret-key: 48
   length-signature: 23642
@@ -195,7 +195,7 @@ parameter-sets:
 - name: cross-rsdp-256-balanced
   oqs_alg: OQS_SIG_alg_cross_rsdp_256_balanced
   claimed-nist-level: 5
-  claimed-security: EUF-CMA
+  claimed-security: BUFF
   length-public-key: 153
   length-secret-key: 64
   length-signature: 51056
@@ -223,7 +223,7 @@ parameter-sets:
 - name: cross-rsdp-256-fast
   oqs_alg: OQS_SIG_alg_cross_rsdp_256_fast
   claimed-nist-level: 5
-  claimed-security: EUF-CMA
+  claimed-security: BUFF
   length-public-key: 153
   length-secret-key: 64
   length-signature: 76298
@@ -251,7 +251,7 @@ parameter-sets:
 - name: cross-rsdp-256-small
   oqs_alg: OQS_SIG_alg_cross_rsdp_256_small
   claimed-nist-level: 5
-  claimed-security: EUF-CMA
+  claimed-security: BUFF
   length-public-key: 153
   length-secret-key: 64
   length-signature: 43592
@@ -279,7 +279,7 @@ parameter-sets:
 - name: cross-rsdpg-128-balanced
   oqs_alg: OQS_SIG_alg_cross_rsdpg_128_balanced
   claimed-nist-level: 1
-  claimed-security: EUF-CMA
+  claimed-security: BUFF
   length-public-key: 54
   length-secret-key: 32
   length-signature: 9236
@@ -307,7 +307,7 @@ parameter-sets:
 - name: cross-rsdpg-128-fast
   oqs_alg: OQS_SIG_alg_cross_rsdpg_128_fast
   claimed-nist-level: 1
-  claimed-security: EUF-CMA
+  claimed-security: BUFF
   length-public-key: 54
   length-secret-key: 32
   length-signature: 12472
@@ -335,7 +335,7 @@ parameter-sets:
 - name: cross-rsdpg-128-small
   oqs_alg: OQS_SIG_alg_cross_rsdpg_128_small
   claimed-nist-level: 1
-  claimed-security: EUF-CMA
+  claimed-security: BUFF
   length-public-key: 54
   length-secret-key: 32
   length-signature: 7956
@@ -363,7 +363,7 @@ parameter-sets:
 - name: cross-rsdpg-192-balanced
   oqs_alg: OQS_SIG_alg_cross_rsdpg_192_balanced
   claimed-nist-level: 3
-  claimed-security: EUF-CMA
+  claimed-security: BUFF
   length-public-key: 83
   length-secret-key: 48
   length-signature: 23380
@@ -391,7 +391,7 @@ parameter-sets:
 - name: cross-rsdpg-192-fast
   oqs_alg: OQS_SIG_alg_cross_rsdpg_192_fast
   claimed-nist-level: 3
-  claimed-security: EUF-CMA
+  claimed-security: BUFF
   length-public-key: 83
   length-secret-key: 48
   length-signature: 27404
@@ -419,7 +419,7 @@ parameter-sets:
 - name: cross-rsdpg-192-small
   oqs_alg: OQS_SIG_alg_cross_rsdpg_192_small
   claimed-nist-level: 3
-  claimed-security: EUF-CMA
+  claimed-security: BUFF
   length-public-key: 83
   length-secret-key: 48
   length-signature: 18188
@@ -447,7 +447,7 @@ parameter-sets:
 - name: cross-rsdpg-256-balanced
   oqs_alg: OQS_SIG_alg_cross_rsdpg_256_balanced
   claimed-nist-level: 5
-  claimed-security: EUF-CMA
+  claimed-security: BUFF
   length-public-key: 106
   length-secret-key: 64
   length-signature: 40134
@@ -475,7 +475,7 @@ parameter-sets:
 - name: cross-rsdpg-256-fast
   oqs_alg: OQS_SIG_alg_cross_rsdpg_256_fast
   claimed-nist-level: 5
-  claimed-security: EUF-CMA
+  claimed-security: BUFF
   length-public-key: 106
   length-secret-key: 64
   length-signature: 48938
@@ -503,7 +503,7 @@ parameter-sets:
 - name: cross-rsdpg-256-small
   oqs_alg: OQS_SIG_alg_cross_rsdpg_256_small
   claimed-nist-level: 5
-  claimed-security: EUF-CMA
+  claimed-security: BUFF
   length-public-key: 106
   length-secret-key: 64
   length-signature: 32742
