--- a/docs/algorithms/sig/cross.yml
+++ b/docs/algorithms/sig/cross.yml
@@ -14,14 +14,14 @@ principal-submitters:
 - Antonia Wachter-Zeh
 - Violetta Weger
 auxiliary-submitters:
-- TODO
+- Marco Gianvecchio
 crypto-assumption: hardness of the restricted syndrome decoding problem for random
   linear codes on a finite field
 website: https://www.cross-crypto.com/
 nist-round: 1
 spec-version: 1.2 + Keccak_x4 + PQClean fixes
 primary-upstream:
-  source: https://github.com/rtjk/CROSS-PQClean/commit/64529ee21c8cf791774d5ce63a68053634d1d94f
+  source: https://github.com/rtjk/CROSS-PQClean/commit/577d7c761c684637923c8648644cf2f4d7b41954
   spdx-license-identifier: CC0-1.0
 parameter-sets:
 - name: cross-rsdp-128-balanced
