disabled variants with large stack usage in zephyr
Signed-off-by: rtjk <47841774+rtjk@users.noreply.github.com>

--- a/zephyr/CMakeLists.txt
+++ b/zephyr/CMakeLists.txt
@@ -130,6 +130,13 @@ if(CONFIG_LIBOQS)
 
         if(CONFIG_LIBOQS_ENABLE_SIG_CROSS)
                 set(OQS_ENABLE_SIG_CROSS ON)
+                # Disable CROSS variants with large stack usage
+                set(OQS_ENABLE_SIG_cross_rsdp_128_small OFF)
+                set(OQS_ENABLE_SIG_cross_rsdp_192_small OFF)
+                set(OQS_ENABLE_SIG_cross_rsdp_256_balanced OFF)
+                set(OQS_ENABLE_SIG_cross_rsdp_256_small OFF)
+                set(OQS_ENABLE_SIG_cross_rsdpg_192_small OFF)
+                set(OQS_ENABLE_SIG_cross_rsdpg_256_small OFF)
         else()  
                 set(OQS_ENABLE_SIG_CROSS OFF)
         endif()
